--- a/_posts/2024-06-26-test.md
+++ b/_posts/2024-06-26-test.md
@@ -1,5 +1,5 @@
 ---
-title: FAILURE- Build failed with an exception. Incompatible because this component declares a component for use during compile-time, compatible with Java 17 and the consumer needed a component for use during runtime, compatible with Java 10
+title: 테스트 중 입니다.
 date: 2024-03-29 18:15:00 +0900
 categories: [SPRING, JAVA, MAC, GRADLE]
 tags: [gradle, spring, java, mac]  # TAG names should always be lowercase
