--- a/_posts/2024-06-26-test.md
+++ b/_posts/2024-06-26-test.md
@@ -9,3 +9,9 @@ Hello?
 ===
 ## test중입니다.
 ### test 완료 시 새로고침 부탁드립니다.
+
+## 이미지 테스트
+```
+![](이미지주소.jpg,png,gif)
+```
+![](https://code.visualstudio.com/assets/docs/editor/intellisense/intellisense.gif)
