--- a/_posts/2024-06-26-test.md
+++ b/_posts/2024-06-26-test.md
@@ -15,3 +15,27 @@ Hello?
 ![](이미지주소.jpg,png,gif)
 ```
 ![](https://code.visualstudio.com/assets/docs/editor/intellisense/intellisense.gif)
+
+***
+*****
+-----
+## 홈페이지 테스트
+홈페이지 링크: <https://thatismine.github.io/>
+
+## 강조
+```
+*강조*
+_밑줄_
+**더블강조**
+__더블밑줄__
+~~선긋기~~
+```
+*강조*  
+_밑줄_  
+**더블강조**    
+__더블밑줄__    
+~~선긋기~~  
+### 줄바꿈
+```
+Tab키를 누르거나 스페이스바 3번을 하면 줄이 바뀐다.
+```
