--- a/_posts/2024-06-26-test.md
+++ b/_posts/2024-06-26-test.md
@@ -5,20 +5,33 @@ categories: [SPRING, JAVA, MAC, GRADLE]
 tags: [gradle, spring, java, mac]  # TAG names should always be lowercase
 authors: [gonnichiwa]
 ---
-Hello?
+TEST
 ===
 ## test중입니다.
 ### test 완료 시 새로고침 부탁드립니다.
 
 ## 이미지 테스트
 ```
-![](이미지주소.jpg,png,gif)
+![이미지머릿말(안적어도됌)](이미지주소.jpg,png,gif)
 ```
-![](https://code.visualstudio.com/assets/docs/editor/intellisense/intellisense.gif)
+![test](https://code.visualstudio.com/assets/docs/editor/intellisense/intellisense.gif)
 
+## 이미지 사이즈 조절
+```
+<img src="이미지주소" width="가로길이" height="높이" title="px(픽셀) 크기 설정" alt="이미지설명"></img><br/>
+```
+<img src="https://code.visualstudio.com/assets/docs/editor/intellisense/intellisense.gif" width="450" height="300" title="px(픽셀) 크기 설정" alt="이미지설명"></img><br/>
+
+## 선긋기
+```
 ***
+* * *
 *****
+- - -
 -----
+```
+***
+---
 ## 홈페이지 테스트
 홈페이지 링크: <https://thatismine.github.io/>
 
